[package]
name = "knob-com"
version = "0.1.0"
authors = ["PieMyth <haugenw94@gmail.com>", "Subwater <jimmysper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.12.0"
find_folder = "0.3.0"
mqtt-protocol = "0.11.0"
systray = "0.4.0"